--- a/package.json
+++ b/package.json
@@ -7,5 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "helmet": "^3.15.1",
+    "lodash": "^4.17.11",
+    "mongodb": "^2.2.5",
+    "mongoose": "^5.3.13"
+  },
+  "devDependencies": {
+    "expect": "^21.1.0",
+    "mocha": "^3.0.2",
+    "nyc": "^13.1.0",
+    "supertest": "^2.0.0"
+  }
 }
