--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && nyc --reporter=html mocha test/*.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "lodash": "^4.17.11",
+    "moment-timezone": "0.0.1",
     "mongodb": "^2.2.5",
     "mongoose": "^5.3.13"
   },
