Set the mocha debugger to use the test node environment.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,7 @@
                 "--colors",
                 "${workspaceFolder}/test"
             ],
+            "env": { "NODE_ENV": "test" },
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
